--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,19 @@
-version: '3.8'
-
 services:
+  db:
+    image: mariadb:10.11
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: url_shortener
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost -u root -proot"]
+      interval: 3s
+      timeout: 5s
+      retries: 10
+    ports:
+      - "3306:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+
   php:
     build:
       context: .
@@ -10,17 +23,8 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - db
-
-  db:
-    image: mariadb:10.11
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: url_shortener
-    volumes:
-      - db_data:/var/lib/mysql
-      - ./docker/db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      db:
+        condition: service_healthy
 
 volumes:
   db_data:
